crates/graphcal-project/tests/snapshots/error_snapshots__error_division_by_zero.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
division by zero
