crates/graphcal-project/tests/snapshots/error_snapshots__error_domain_field_const_violation.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
domain violation: `SAT.mass` value 5000 is above maximum (2000 kg)
    Diagnostic severity: error
Begin snippet for domain_field_const_violation.gcl starting at line 5, column 1

snippet line 5: 
snippet line 6: const node SAT: SatelliteSpec = SatelliteSpec(mass: 5000.0 kg, altitude: 50.0 km);
    label at line 6, columns 1 to 82: value out of declared domain
diagnostic help: the value must satisfy the domain constraints declared on the type
diagnostic code: graphcal::C001
