crates/graphcal-project/tests/snapshots/error_snapshots__error_domain_inline_dag_generic_constraint.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
domain constraints are not supported on generic type arguments
    Diagnostic severity: error
Begin snippet for domain_inline_dag_generic_constraint.gcl starting at line 6, column 1

snippet line 6:     type Bad {
snippet line 7:         Bad(value: Wrapper<Length(min: 0.0 m)>),
    label at line 7, columns 35 to 44: constraint not allowed here
snippet line 8:     }
diagnostic help: put the constraint on the field in the struct definition, not on the generic type argument
diagnostic code: graphcal::C006
